[bumpversion]
current_version = 0.1.0
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\+dev\.(?P<build>\d+))?
serialize = 
	{major}.{minor}.{patch}+dev.{build}
	{major}.{minor}.{patch}
allow_durty = true

[bumpversion:file:src/kaa/__init__.py]

[metadata]
description = A true python for empowering package development, deployment and publication flow
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Operating System :: OS Independent
	
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	
	License :: OSI Approved :: MIT License
	
	Topic :: Software Development :: Build Tools
	Topic :: Utilities

[options]
install_requires = 
	pip <21
	setuptools <48
	wheel <1
	twine <4
	
	commitizen
	GitPython <4
	PyGithub <2
	
	shields >= 2019.04.13
	python-readme-generator >= 2019.4.13

[options.entry_points]
console_scripts = 
	kaa = kaa:born
kaa.attack = 
	flick = kaa.serpent:flick
kaa.wisdom = 
	metadata = kaa.snake:Metadata.load
	vocabulary = kaa.snake:Vocabulary.load
kaa.sections = 
	head = kaa.serpent.tongue:Head
	getting_started = kaa.serpent.tongue:Getting_Started
	overview = kaa.serpent.tongue:Overview

[aliases]
dist = bdist_wheel sdist

[sdist]
formats = zip

[bdist_wheel]
python_tag = py3

[egg_info]
egg_base = build/lib
