[bumpversion]
current_version = 0.2.1
parse = (?P<MAJOR>\d+)\.(?P<MINOR>\d+)\.(?P<PATCH>\d+)(\.dev(?P<BUILD>\d+))?
serialize = 
	{MAJOR}.{MINOR}.{PATCH}.dev{BUILD}
	{MAJOR}.{MINOR}.{PATCH}
allow_durty = true

[bumpversion:file:src/kaa/__init__.py]

[metadata]
description = A true python for empowering package development, deployment and publication flow
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Operating System :: OS Independent
	
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	
	License :: OSI Approved :: MIT License
	
	Topic :: Software Development :: Build Tools
	Topic :: Utilities

[options]
install_requires = 
	pip <21
	setuptools <48
	wheel <1
	twine <4
	
	commitizen <223
	GitPython <4
	PyGithub <2
	pre-commit <3
	
	shields >= 2019.04.13
	python-readme-generator >= 2019.4.13

[options.entry_points]
console_scripts = 
	kaa = kaa:born
kaa.wisdom = 
	metadata = kaa.snake:Metadata.load
	options = kaa.snake:Options.load
	vocabulary = kaa.snake:Vocabulary.load

[aliases]
dist = bdist_wheel sdist

[sdist]
formats = zip

[bdist_wheel]
python_tag = py3

[egg_info]
egg_base = build/lib
